# masterarbeit-analyse

./: .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  alembic.ini  pyproject.toml  requirements.txt
.codex/: config.toml
.githooks/: check_commit_msg.py  commit-msg  commit-msg.ps1
Skripte/: 0_Befehle.md  analyze_simulation_results.py  compare_cooling_loads.py  compare_heating_loads.py  create_comfort_plots.py  extract_building_catalog_sections.py  prepare_data.py  run_pipeline_display.py
config/: README.md
data/: README.md
docs/: DATA_MODEL.md  DECISIONS.md  ECONOMIC_MODEL.md  PLAN.md  README.md  WORKFLOW.md  architecture.md  commands.md  commit_hooks.md
logs/: .gitkeep
ma_analyse/: __init__.py  __main__.py
migrations/: README.md  env.py
tests/: conftest.py  test_architecture_guardrails.py  test_cli.py  test_config.py  test_gui_selection.py  test_logging.py  test_ma_analyse_commands.py  test_ma_analyse_services.py  test_ma_building_demo_loader.py  test_ma_building_diagnostics.py  test_ma_building_ifc_lite_import.py  test_ma_building_local_catalogs.py  test_ma_building_models.py  test_ma_building_validation.py  test_ma_core_compliance.py  test_ma_core_configuration.py  test_ma_core_input_architecture.py  test_ma_database_catalog.py  test_ma_p028.py  test_ma_parameter_variations.py  test_ma_parameters_baseline.py  test_ma_parameters_catalog_owner_transfer.py  test_ma_parameters_input_package.py  test_ma_parameters_preview.py  test_ma_parameters_released_technical_handover.py  test_ma_parameters_released_zone_checkpoint.py  test_ma_parameters_snapshot.py  test_ma_project_project_models.py  test_ma_simulation_setup.py  test_ma_stage1_dimensioning.py  test_ma_technical_demo_loader.py  test_ma_technical_schema_v2.py  test_ma_technical_v2_loader.py  test_ma_ui_shell.py  test_ma_validation.py  test_ma_variant_workflow.py  test_ma_variants_database.py  test_ma_variants_economic_analysis.py  (+20 more)
(+612 files in other folders)
