[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ma-analyse"
version = "0.1.0"
description = "Analysepipeline fuer Simulationsdaten der Masterarbeit"
requires-python = ">=3.14"
dependencies = [
    "matplotlib",
    "openpyxl",
    "pandas",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]

[project.scripts]
ma-analyse = "ma_analyse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
